--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap-4-grid": "^3.2.0"
+    "bootstrap-4-grid": "^3.2.0",
+    "progressbar.js": "^1.1.0"
   }
 }
